add afplay document

--- a/note/macos.html
+++ b/note/macos.html
@@ -56,9 +56,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org33f35b8">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org7688764">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org2813389">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#orgc78b7a3">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org41c4d31">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org895188a">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -83,17 +83,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org33f35b8" class="outline-2">
-<h2 id="org33f35b8">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org33f35b8">
+<div id="outline-container-orgc78b7a3" class="outline-2">
+<h2 id="orgc78b7a3">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-orgc78b7a3">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org7688764" class="outline-2">
-<h2 id="org7688764">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org7688764">
+<div id="outline-container-org41c4d31" class="outline-2">
+<h2 id="org41c4d31">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org41c4d31">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -113,9 +113,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org2813389" class="outline-2">
-<h2 id="org2813389">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org2813389">
+<div id="outline-container-org895188a" class="outline-2">
+<h2 id="org895188a">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org895188a">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -135,6 +135,13 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </section>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/afplay.html">afplay</a></h2>
+<div class="article-link-date">
+2020년 4월 15일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
