--- a/note/index.html
+++ b/note/index.html
@@ -51,6 +51,13 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/afplay.html">afplay</a></h2>
+<div class="article-link-date">
+2020년 4월 15일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
 <div class="article-link-date">
 2020년 4월 14일 수정</div>
