--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/find.html">find</a></h2>
+<div class="article-link-date">
+2020년 4월 15일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/dockerfile.html">Dockerfile</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
@@ -127,13 +134,6 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/shell.html">셸</a></h2>
-<div class="article-link-date">
-2020년 4월 13일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
 <div class="article-link-date">
 2020년 4월 13일 수정</div>
 </div>
