--- a/note/shell.html
+++ b/note/shell.html
@@ -70,6 +70,13 @@ gtag('config', 'UA-44534026-1');
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/find.html">find</a></h2>
+<div class="article-link-date">
+2020년 4월 15일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
