several updates wow

--- a/index.html
+++ b/index.html
@@ -70,72 +70,72 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/find.html">find</a></h2>
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/dockerfile.html">Dockerfile</a></h2>
+<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/docker-compose.html">Docker Compose</a></h2>
+<h2><a class="article-link-title" href="/note/org-spreadsheet.html">Org 스프레드시트</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
+<h2><a class="article-link-title" href="/note/org-publish.html">Org Publish</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/cli.html">CLI</a></h2>
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/afplay.html">afplay</a></h2>
+<h2><a class="article-link-title" href="/note/tmux.html">Tmux</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
-2020년 4월 14일 수정</div>
+2020년 4월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
+<h2><a class="article-link-title" href="/note/vim.html">Vim</a></h2>
 <div class="article-link-date">
-2020년 4월 14일 수정</div>
+2020년 4월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
+<h2><a class="article-link-title" href="/note/spacemacs.html">Spacemacs</a></h2>
 <div class="article-link-date">
-2020년 4월 14일 수정</div>
+2020년 4월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/shell.html">셸</a></h2>
+<h2><a class="article-link-title" href="/note/emacs-lisp.html">Emacs Lisp</a></h2>
 <div class="article-link-date">
-2020년 4월 13일 수정</div>
+2020년 4월 15일 수정</div>
 </div>
 </div>
 </div>
