--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -3,14 +3,14 @@
 <meta charset="utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
-<title>셸 - Seorenn</title>
-<meta name="twitter:title" content="셸" />
-<meta name="og:title" content="셸" />
-<meta name="description" content="셸(Shell)" />
-<meta name="twitter:description" content="셸(Shell)" />
-<meta name="og:description" content="셸(Shell)" />
-<link rel="canonical" href="https://seorenn.github.io/note/shell.html" />
-<meta property="og:url" content="https://seorenn.github.io/note/shell.html" />
+<title>Doom Emacs - Seorenn</title>
+<meta name="twitter:title" content="Doom Emacs" />
+<meta name="og:title" content="Doom Emacs" />
+<meta name="description" content="커뮤니티 주도 설정팩인 Doom Emacs(둠 이맥스)의 간략한 설명 및 관련글들을 정리합니다." />
+<meta name="twitter:description" content="커뮤니티 주도 설정팩인 Doom Emacs(둠 이맥스)의 간략한 설명 및 관련글들을 정리합니다." />
+<meta name="og:description" content="커뮤니티 주도 설정팩인 Doom Emacs(둠 이맥스)의 간략한 설명 및 관련글들을 정리합니다." />
+<link rel="canonical" href="https://seorenn.github.io/note/doom-emacs.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/doom-emacs.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -50,71 +50,55 @@ gtag('config', 'UA-44534026-1');
 <hr/>
 <section class="content">
 <header>
-<h1>셸</h1>
-<div class="title-date">2020년 4월 13일 수정</div>
+<h1>Doom Emacs</h1>
+<div class="title-date">2020년 4월 15일 수정</div>
 </header>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#orgea17ce3">관련된 글들</a></li>
+</ul>
+</div>
+</div>
 <p>
-셸(Shell)은 텍스트 커맨드를 입력 받아 분석하고 명령을 전달하는 시스템
-소프트웨어다.
+Doom Emacs 는 <a href="emacs.html">Emacs</a> Community Driven Configuration의
+양대산맥인 <a href="spacemacs.html">Spacemacs</a>와 함께
+유명한 <a href="emacs.html">Emacs</a> 설정 프로젝트다.
+직접 과도하게 세팅해서 사용하는 것이 귀찮다면
+이런 설정도 사용해보면 괜찮을 것 같다.
 </p>
 
 <p>
-대표적으로 <a href="sh.html">Bourne Shell</a>이 유명하다.
+Doom Emacs도 <a href="spacemacs.html">Spacemacs</a>와 비슷하게
+<a href="vim.html">Vim</a> 키맵을 흉내 내주는 evil이라는 확장을 토대로
+<a href="vim.html">Vim</a> 키맵에 기반한 <a href="emacs.html">Emacs</a> 환경을 설정하고
+이와 어울리는 단축키 환경을 만들어 놓은 것이 특징이다.
 </p>
 
-<p>
-주로 <a href="cli.html">CLI</a>와 큰 관계가 있다.
-</p>
+<div id="outline-container-orgea17ce3" class="outline-2">
+<h2 id="orgea17ce3">관련된 글들</h2>
+<div class="outline-text-2" id="text-orgea17ce3">
+<ul class="org-ul">
+<li><a target="_blank" href="https://github.com/hlissner/doom-emacs">Doom Emacs 공식 저장소</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/47">Doom Emacs 라는 것을 설치해봤다</a></li>
+</ul>
+</div>
+</div>
 </section>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/tmux.html">Tmux</a></h2>
+<h2><a class="article-link-title" href="/note/spacemacs.html">Spacemacs</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/find.html">find</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/cli.html">CLI</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
-<div class="article-link-date">
-2020년 4월 14일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
-<div class="article-link-date">
-2020년 4월 13일 수정</div>
 </div>
 </div>
 </div>
