--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -3,14 +3,14 @@
 <meta charset="utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
-<title>셸 - Seorenn</title>
-<meta name="twitter:title" content="셸" />
-<meta name="og:title" content="셸" />
-<meta name="description" content="셸(Shell)" />
-<meta name="twitter:description" content="셸(Shell)" />
-<meta name="og:description" content="셸(Shell)" />
-<link rel="canonical" href="https://seorenn.github.io/note/shell.html" />
-<meta property="og:url" content="https://seorenn.github.io/note/shell.html" />
+<title>Emacs Lisp - Seorenn</title>
+<meta name="twitter:title" content="Emacs Lisp" />
+<meta name="og:title" content="Emacs Lisp" />
+<meta name="description" content="Emacs Lisp에 관한 정보 모음" />
+<meta name="twitter:description" content="Emacs Lisp에 관한 정보 모음" />
+<meta name="og:description" content="Emacs Lisp에 관한 정보 모음" />
+<link rel="canonical" href="https://seorenn.github.io/note/emacs-lisp.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/emacs-lisp.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -50,20 +50,14 @@ gtag('config', 'UA-44534026-1');
 <hr/>
 <section class="content">
 <header>
-<h1>셸</h1>
-<div class="title-date">2020년 4월 13일 수정</div>
+<h1>Emacs Lisp</h1>
+<div class="title-date">2020년 4월 15일 수정</div>
 </header>
 <p>
-셸(Shell)은 텍스트 커맨드를 입력 받아 분석하고 명령을 전달하는 시스템
-소프트웨어다.
-</p>
-
-<p>
-대표적으로 <a href="sh.html">Bourne Shell</a>이 유명하다.
-</p>
-
-<p>
-주로 <a href="cli.html">CLI</a>와 큰 관계가 있다.
+Emacs Lisp은 이름 처럼 <a href="emacs.html">Emacs</a>에서 사용할 수 있는
+Lisp 언어를 의미한다.
+물론 표준 Common Lisp에 <a href="emacs.html">Emacs</a>의 다양한 함수가 지원되는
+형태라서 Lisp이 아니라고 하기에도 좀 미묘하긴 하다.
 </p>
 </section>
 <hr /><div class="backlinks-container">
@@ -73,48 +67,6 @@ gtag('config', 'UA-44534026-1');
 <h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/tmux.html">Tmux</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/find.html">find</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/cli.html">CLI</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
-<div class="article-link-date">
-2020년 4월 14일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
-<div class="article-link-date">
-2020년 4월 13일 수정</div>
 </div>
 </div>
 </div>
