--- a/note/org-spreadsheet.html
+++ b/note/org-spreadsheet.html
@@ -3,14 +3,14 @@
 <meta charset="utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
-<title>셸 - Seorenn</title>
-<meta name="twitter:title" content="셸" />
-<meta name="og:title" content="셸" />
-<meta name="description" content="셸(Shell)" />
-<meta name="twitter:description" content="셸(Shell)" />
-<meta name="og:description" content="셸(Shell)" />
-<link rel="canonical" href="https://seorenn.github.io/note/shell.html" />
-<meta property="og:url" content="https://seorenn.github.io/note/shell.html" />
+<title>Org 스프레드시트 - Seorenn</title>
+<meta name="twitter:title" content="Org 스프레드시트" />
+<meta name="og:title" content="Org 스프레드시트" />
+<meta name="description" content="Org Mode 문서로 스프레드시트(Spreadsheet)를 만드는 방법에 대한 가이드입니다." />
+<meta name="twitter:description" content="Org Mode 문서로 스프레드시트(Spreadsheet)를 만드는 방법에 대한 가이드입니다." />
+<meta name="og:description" content="Org Mode 문서로 스프레드시트(Spreadsheet)를 만드는 방법에 대한 가이드입니다." />
+<link rel="canonical" href="https://seorenn.github.io/note/org-spreadsheet.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/org-spreadsheet.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -50,71 +50,42 @@ gtag('config', 'UA-44534026-1');
 <hr/>
 <section class="content">
 <header>
-<h1>셸</h1>
-<div class="title-date">2020년 4월 13일 수정</div>
+<h1>Org 스프레드시트</h1>
+<div class="title-date">2020년 4월 15일 수정</div>
 </header>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#orga5a431b">관련된 글들</a></li>
+</ul>
+</div>
+</div>
 <p>
-셸(Shell)은 텍스트 커맨드를 입력 받아 분석하고 명령을 전달하는 시스템
-소프트웨어다.
+<a href="org-mode.html">Org Mode</a>의 테이블은 다양한 기능을 제공한다.
+그 중 하나가 테이블 셀을 이용해 계산을 하는 것이다.
 </p>
 
 <p>
-대표적으로 <a href="sh.html">Bourne Shell</a>이 유명하다.
+자세한 내용은 <a target="_blank" href="https://seorenn.tistory.com/70">Org Mode 테이블 스프레드시트</a>
+글을 참고하자.
 </p>
 
-<p>
-주로 <a href="cli.html">CLI</a>와 큰 관계가 있다.
-</p>
+<div id="outline-container-orga5a431b" class="outline-2">
+<h2 id="orga5a431b">관련된 글들</h2>
+<div class="outline-text-2" id="text-orga5a431b">
+<ul class="org-ul">
+<li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏 Org as a spreadsheet system: a short introduction</a></li>
+</ul>
+</div>
+</div>
 </section>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/tmux.html">Tmux</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/find.html">find</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/cli.html">CLI</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
-<div class="article-link-date">
-2020년 4월 14일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
-<div class="article-link-date">
-2020년 4월 13일 수정</div>
 </div>
 </div>
 </div>
