--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -3,14 +3,14 @@
 <meta charset="utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
-<title>셸 - Seorenn</title>
-<meta name="twitter:title" content="셸" />
-<meta name="og:title" content="셸" />
-<meta name="description" content="셸(Shell)" />
-<meta name="twitter:description" content="셸(Shell)" />
-<meta name="og:description" content="셸(Shell)" />
-<link rel="canonical" href="https://seorenn.github.io/note/shell.html" />
-<meta property="og:url" content="https://seorenn.github.io/note/shell.html" />
+<title>Spacemacs - Seorenn</title>
+<meta name="twitter:title" content="Spacemacs" />
+<meta name="og:title" content="Spacemacs" />
+<meta name="description" content="Spacemacs(스페이스맥스)에 관한 간략한 설명 및 관련글들" />
+<meta name="twitter:description" content="Spacemacs(스페이스맥스)에 관한 간략한 설명 및 관련글들" />
+<meta name="og:description" content="Spacemacs(스페이스맥스)에 관한 간략한 설명 및 관련글들" />
+<link rel="canonical" href="https://seorenn.github.io/note/spacemacs.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/spacemacs.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -50,71 +50,61 @@ gtag('config', 'UA-44534026-1');
 <hr/>
 <section class="content">
 <header>
-<h1>셸</h1>
-<div class="title-date">2020년 4월 13일 수정</div>
+<h1>Spacemacs</h1>
+<div class="title-date">2020년 4월 15일 수정</div>
 </header>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#org63ef52e">관련된 글들</a></li>
+</ul>
+</div>
+</div>
 <p>
-셸(Shell)은 텍스트 커맨드를 입력 받아 분석하고 명령을 전달하는 시스템
-소프트웨어다.
+스페이스맥스(Spacemacs)는 Community Driven Emacs Configuration 으로
+거대한 설정 파일 묶음 프로젝트다.
+<a href="vim.html">Vim</a> 키맵을 구현하는 evil 확장을 기반으로
+많은 확장들을 여기에 맞게 설정하고 있다.
+또한 이름에 맞게 스페이스키를 커맨드 트리거로 사용하는 등
+원래의 <a href="emacs.html">Emacs</a>에 비해 편리하면서도
+통일된 단축키 설정을 제공하는 것이 특징이다.
 </p>
 
 <p>
-대표적으로 <a href="sh.html">Bourne Shell</a>이 유명하다.
+개인적으로 1년 넘게 사용해오다 최근에는
+<a href="doom-emacs.html">Doom Emacs</a>로 갈아타긴 했지만
+편리한 설정 환경과 <a href="emacs.html">Emacs</a>를 벗어나지 않고도
+다양한 확장을 자동으로 설치해 주는 등
+여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<p>
-주로 <a href="cli.html">CLI</a>와 큰 관계가 있다.
-</p>
+<div id="outline-container-org63ef52e" class="outline-2">
+<h2 id="org63ef52e">관련된 글들</h2>
+<div class="outline-text-2" id="text-org63ef52e">
+<ul class="org-ul">
+<li><a target="_blank" href="https://www.spacemacs.org/">스페이맥스 공식 홈페이지</a></li>
+<li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏
+The (Subjective) Spacemacs Howto</a>:
+개인적으로 운영하는 유튜브 채널의 스페이스맥스 플레이리스트다.
+현재 둠으로 잠시 이주한 탓에 업데이트가 안 되고 있기는 하다.</li>
+</ul>
+</div>
+</div>
 </section>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/tmux.html">Tmux</a></h2>
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/find.html">find</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/cli.html">CLI</a></h2>
-<div class="article-link-date">
-2020년 4월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
-<div class="article-link-date">
-2020년 4월 14일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
-<div class="article-link-date">
-2020년 4월 13일 수정</div>
 </div>
 </div>
 </div>
