--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -64,6 +64,13 @@ Lisp 언어를 의미한다.
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<div class="article-link-date">
+2020년 4월 16일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
