--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -56,7 +56,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org63ef52e">관련된 글들</a></li>
+<li><a href="#org9a0d3c9">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -78,9 +78,9 @@ gtag('config', 'UA-44534026-1');
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-org63ef52e" class="outline-2">
-<h2 id="org63ef52e">관련된 글들</h2>
-<div class="outline-text-2" id="text-org63ef52e">
+<div id="outline-container-org9a0d3c9" class="outline-2">
+<h2 id="org9a0d3c9">관련된 글들</h2>
+<div class="outline-text-2" id="text-org9a0d3c9">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.spacemacs.org/">스페이맥스 공식 홈페이지</a></li>
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏
@@ -95,14 +95,14 @@ The (Subjective) Spacemacs Howto</a>:
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
-2020년 4월 15일 수정</div>
+2020년 4월 16일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
 <div class="article-link-date">
 2020년 4월 15일 수정</div>
 </div>
